--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,12 @@
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  background: radial-gradient(
+    circle,
+    rgba(195, 214, 213, 1) 0%,
+    rgba(131, 180, 195, 1) 23%,
+    rgba(2, 0, 36, 1) 100%
+  );
 }
